-refactor: show accout name when first and last name provided -fix: whitespace bug in user view -fix: overflow bug in access keys table -style: adjust footer breakpoint for new tablet version -fix: whitespace above mobile dropdown nav -fix: collision with slide-in-pane for item-pages

--- a/src/encoded/static/scss/encoded/_layout.scss
+++ b/src/encoded/static/scss/encoded/_layout.scss
@@ -326,7 +326,7 @@ body.is-full-screen {
 
 // make footer look good on larger screens
 	// and activate sticky footer
-	@include media-breakpoint-up(md) {
+	@include media-breakpoint-up(lg) {
 
 		#page-footer {
 			height: $footer-height;
